--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.3.5",
     "postcss": "^8.4.17",
-    "push-dir": "^0.4.1"
+    "push-dir": "^0.4.1",
+    "tailwindcss": "^3.2.4"
   }
 }
