--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^5.3.5",
-    "postcss": "^8.4.17",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
     "push-dir": "^0.4.1",
     "tailwindcss": "^3.2.4"
   }
